# KB_MC_LAUNCHER

./: .gitignore  LICENSE  PRIVACY.md  README.md  example-env  index.html  justfile  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  AppLoader.tsx  config.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  launcher.rs  lib.rs  logging.rs  main.rs
src-tauri/src/auth/: microsoft.rs  minecraft.rs  mod.rs  skin.rs  xbox.rs
src-tauri/src/installer/: download.rs  extract.rs  mod.rs  progress.rs  requirements.rs  sysinfo.rs
src-tauri/src/installer/loaders/: fabric.rs  forge.rs  mod.rs  neoforge.rs  vanilla.rs
src-tauri/src/minecraft/: commands.rs
src/components/: AccountModal.tsx  AccountWidget.tsx  AppSettingsModal.tsx  CustomDropdown.tsx  ModpackSettignsModal.tsx  ModpackSettingsModal.tsx  NavbarComponent.tsx
src/context/: ThemeContext.tsx  UserContext.tsx
src/hooks/: useInstalledModpack.ts
src/repositories/: DiscordRepository.ts  ModpackRepository.ts
src/screens/: HomeScreen.tsx  ModpackDetailScreen.tsx  ModpackInstallScreen.tsx  ModpackLauncher.tsx  ModpackSelectScreen.tsx  SetupScreen.tsx  UpdateCheckerScreen.tsx
src/styles/: accountSelectorStyles.ts  accountWidgetStyles.ts  appSettingStyles.ts  components.ts  discordCardStyles.ts  modackSettingStyles.ts  modpackDetailStyles.ts  navbarStyles.ts  theme.css
src/types/: UpdateTypes.ts  account.ts  index.ts  installer.ts  modpack.ts  modpackSettings.ts  (+1 more)
