[package]
name = "kb-mc-launcher"
version = "0.3.4"
description = "KB Minecraft Launcher"
authors = ["JonayKB"]
edition = "2021"

[lib]
name = "kb_mc_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2.0"
tauri-plugin-log = "2.8.0"
tauri-plugin-process = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
zip = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
anyhow = "1.0"
futures-util = "0.3"
dirs = "5"
num_cpus = "1"
base64 = "0.22"
image = "0.25"
oauth2 = "5"
axum = "0.8"
url = "2"
open = "5"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
